# Mellea-partials

./: .gitignore  intrinsic_chunking_demo.py  pyproject.toml  stream_chunking_demo.py  stream_instruct_demo.py  stream_with_chunking.py  test_stream_instruct.py
doc/: stream_instruct.md
mellea_extra/: __init__.py
src/mellea_partial/: __init__.py  chunking.py  instruct.py
tests/: test_stream_chunking_tool_calls.py  test_stream_instruct.py
